npm install in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,11 @@
+before_script:
+  - npm install
+
+cache:
+  key: "$CI_PIPELINE_ID"
+  untracked: true
+  paths:
+  - node_modules
 
 lint:
   stage: test
@@ -5,3 +13,4 @@ lint:
   - test
   script:
   - npm run lint
+
