--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "node-telegram-bot-api": "^0.30.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
