--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "qs": "^6.8.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
