--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "export $(cat tokens.env | xargs) && node app.js",
-    "test": "echo \"TODO :D\"",
+    "test": "mocha --reporter spec",
     "lint": "eslint . --ext .js",
     "fix": "eslint . --ext .js --fix"
   },
@@ -38,11 +38,14 @@
     "qs": "^6.8.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^6.2.0",
+    "sinon": "^7.4.1"
   }
 }
