--- a/nginx_example.conf
+++ b/nginx_example.conf
@@ -1,4 +1,12 @@
 server {
+    listen 80;
+    server_name your.domain.com;
+    server_tokens off;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
     listen 443 ssl http2;
     server_name your.domain.com;
     server_tokens off;
