--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
-  - node_modules/
   - .npm/
   
 before_script:
-  - npm i --cache .npm --prefer-offline
+  - npm ci --cache .npm --prefer-offline
 
 lint:
   stage: test
