--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+default:
+  image: node:lts-alpine
+
 cache:
   key: ${CI_COMMIT_REF_SLUG}
   paths:
@@ -8,15 +11,11 @@ before_script:
 
 lint:
   stage: test
-  tags:
-  - nodejs
   script:
   - npm run lint
 
 audit:
   stage: test
   allow_failure: true
-  tags:
-  - nodejs
   script:
   - npm audit
