--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "lbry-bot",
+  "name": "gitlab-bot",
   "version": "0.1.0",
-  "description": "A Botfather chat bot for LBRY. The one that rule them all!",
+  "description": "GitLab bot that interconnect GitLab with Telegram",
   "main": "src/index.js",
-  "directories": {
-    "doc": "docs"
-  },
   "scripts": {
     "start": "export $(cat tokens.env | xargs) && node .",
-    "test": "mocha --reporter spec",
     "lint": "eslint src --ext .js",
     "fix": "eslint src --ext .js --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.melroy.org:melroy/lbry-bot.git"
+    "url": "git@gitlab.melroy.org:melroy/gitlab-bot.git"
   },
   "keywords": [
     "bot",
-    "LBRY",
-    "chat",
-    "father",
-    "discord",
     "telegram",
-    "irc"
+    "gitlab",
+    "chat"
   ],
   "author": {
     "name": "Melroy van den Berg",
@@ -31,21 +24,12 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
+    "@gitbeaker/node": "^28.2.0",
     "express": "^4.17.1",
-    "node-telegram-bot-api": "^0.30.0",
-    "qs": "^6.8.0"
+    "node-telegram-bot-api": "^0.52.0",
+    "qs": "^6.10.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^6.1.0",
-    "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^8.2.1",
-    "sinon": "^7.4.1"
+    "eslint": "^7.23.0"
   }
 }
