--- a/nginx_example.conf
+++ b/nginx_example.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name your.domain.com;
+    server_name bot.yourdomain.com;
     server_tokens off;
 
     return 301 https://$host$request_uri;
@@ -8,40 +8,33 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name your.domain.com;
+    server_name bot.yourdomain.com;
     server_tokens off;
     
     ssl on;
-    # Certificate & key
+    # Certificate & key (try to use Let's Encrypt here)
     ssl_certificate /etc/ssl/your_certificate.crt;
     ssl_certificate_key /etc/ssl/your_certificate.key;
     
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
+    # Optionally DH keys
+    #ssl_dhparam /etc/ssl/certs/dhparam.pem;
+
+    # Intermediate config
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
     ssl_session_tickets off;
 
-    ssl_dhparam /etc/ssl/certs/dhparam.pem;
-
-    # old configuration
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA2$
-    ssl_prefer_server_ciphers on;
-
-    # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
+    ssl_ecdh_curve secp521r1:secp384r1:secp256k1;
 
     location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
-        
-        #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # enables WS support
-        #proxy_http_version 1.1;
-        #proxy_set_header Upgrade $http_upgrade;
-        #proxy_set_header Connection "upgrade";
-
-        # Lbry bot server runs on port 3005
-        proxy_pass http://localhost:3005;
+        # Bot runs on port 3013
+        proxy_pass http://localhost:3013;
     }
 }
