Rename the network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: gitlab-bot
     restart: always
     networks:
-      - gitlab_external_network
+      - gitlab_bot_external_network
     volumes:
       - /home/username/folder/to/.env:/app/.env:ro
     ports:
       - "3013:3013"
 
 networks:
-  gitlab_external_network:
+  gitlab_bot_external_network:
