--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "node-telegram-bot-api": "^0.52.0"
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
+    "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^4.3.1"
   }
 }
