Add trailing slash

--- a/nginx_example.conf
+++ b/nginx_example.conf
@@ -35,6 +35,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         # Bot runs on port 3013
-        proxy_pass http://localhost:3013;
+        proxy_pass http://localhost:3013/;
     }
 }
