Support multiple gitlab projects/telegram groups using a Project ID -> Chat ID mapping. Also support deployment job events.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-URL=https://yourhostname.com
+# Bot domain name (sub domain also works)
+URL=https://yourbotdomain.com
+# Telegram secret token
 TELEGRAM_TOKEN=secret
-TELEGRAM_CHAT_ID=@name
+# GitLab secret token
+GITLAB_SECRET_TOKEN=secret
+# GitLab/Telegram mapping. Use the GitLab project ID as key and the Telegram chat ID as value.
+GITLAB_TELEGRAM_CHAT_MAPPING={3: "@telegramgroup", 45: "@othertelegramgroup"}
