Implement fake bot object. Improve gitlab.js code

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ TELEGRAM_TOKEN=secret
 # GitLab secret token
 GITLAB_SECRET_TOKEN=secret
 # GitLab/Telegram mapping. Use the GitLab project ID as key and the Telegram chat ID as value.
-GITLAB_TELEGRAM_CHAT_MAPPING={3: "@telegramgroup", 45: "@othertelegramgroup"}
+GITLAB_TELEGRAM_CHAT_MAPPING={"3": "@telegramgroup", "45": "@othertelegramgroup"}
