--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,23 @@
 default:
-  image: node:lts-alpine
+  image: registry.melroy.org/melroy/docker-images/pnpm:22
 
-cache:
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-  - .npm/
-  
-before_script:
-  - npm ci --cache .npm --prefer-offline
+  before_script:
+    - pnpm install --prefer-offline
+
+  cache:
+    key:
+      files:
+        - pnpm-lock.yaml
+    paths:
+      - .pnpm-store
+
+audit:
+  stage: test
+  script:
+    - pnpm audit
+  allow_failure: true
 
 lint:
   stage: test
   script:
-  - npm run lint
-
-audit:
-  stage: test
-  allow_failure: true
-  script:
-  - npm audit
+    - pnpm run lint
