--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "GitLab bot that interconnect GitLab with Telegram",
   "main": "src/index.js",
+  "packageManager": "pnpm@10.7.1",
   "scripts": {
     "start": "node .",
     "lint": "eslint src --ext .js",
