--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "pino": "^9.6.0"
   },
   "devDependencies": {
     "eslint": "^9.23.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^17.17.0",
     "eslint-plugin-promise": "^7.2.1",
-    "neostandard": "^0.12.1"
+    "neostandard": "^0.12.1",
+    "pino-pretty": "^13.0.0"
   }
 }
