Add formatter as well

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,11 @@ audit:
   script:
     - pnpm audit
   allow_failure: true
+  interruptible: true
 
-lint:
+format_lint:
   stage: test
   script:
+    - pnpm run format
     - pnpm run lint
+  interruptible: true
