Better document env vars. Add GITLAB_PIPELINE_BRANCH_NAME and GITLAB_PIPELINE_SHOW_SUCCESS

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Bot domain name (sub domain also works)
+# Bot domain name (sub domain also works), ideally TLS terminated
 URL=https://yourbotdomain.com
 # Telegram secret token
 TELEGRAM_TOKEN=secret
